--- a/index.html
+++ b/index.html
@@ -7,16 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-    <script type="module" src="/path/to/js.cookie.mjs"></script>
-    <script type="module">
-        import Cookies from '/path/to/js.cookie.mjs'
-
-  Cookies.set('foo', 'bar')
-</script>
-    <script type="module" src="/path/to/js.cookie.mjs"></script>
-    <script nomodule defer src="/path/to/js.cookie.js"></script>
     <script type="text/javascript" src="script.js"></script>
     <title>Google Search</title>
 </head>
@@ -38,7 +29,7 @@
                     <li><i class="fas fa-map-marker-alt icone"></i><a href="#" class="op">Mapa</a></li>
                 </ul>
             </div> -->
-            <hr>
+            <!-- <hr>
             <div class="resultado organic_results" id="organic_results">
                 <section>
                     <a href="" class="title" id="title">...</a>
@@ -46,16 +37,16 @@
                 </section>
             </div>
             <div class="info">
-                <aside id="knowledge_graph">
+                <aside id="knowledge_graph"> -->
                     <!-- <img src="images/transferir (1).png" alt="Imagens" class="img">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.7248858935427!2d-46.734756085384376!3d-23.54239546677643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ceff683a0a87e9%3A0xc1bd3203f85e288d!2sWebPeak%20Brasil!5e0!3m2!1spt-BR!2sbr!4v1641483725906!5m2!1spt-BR!2sbr"
                         width="250" height="200" allowfullscreen="" loading="lazy"></iframe> -->
-                    <h4>Título</h4>
+                    <!-- <h4>Título</h4>
                     <p>Endereço</p>
                     <p>Telefone</p>
                 </aside>
-            </div>
+            </div> -->
         </form>
     </div>
 </body>
